# Yip

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/ast/: Cargo.toml
crates/ast/src/: annotations.rs  event.rs  kind.rs  lib.rs  macros.rs  types.rs
crates/ast/src/expression/: literal.rs  mod.rs
crates/ast/src/items/: alias.rs  constants.rs  directives.rs  enums.rs  handles.rs  interfaces.rs  mod.rs  structure.rs  unions.rs  uses.rs
crates/parsing/: Cargo.toml
crates/parsing/src/: annotations.rs  expression.rs  lexer.rs  lib.rs  parser.rs  testing.rs  types.rs  utils.rs
crates/parsing/src/items/: alias.rs  constants.rs  directives.rs  enums.rs  handles.rs  interfaces.rs  mod.rs  structure.rs  unions.rs  uses.rs
crates/type_check/: Cargo.toml
crates/type_check/src/: infix.rs  lib.rs  literal.rs  unary.rs
src/: main.rs
