[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
rowan = "0.15"
logos = "0.13"
drop_bomb = "0.1"
text-size = "1.1"
ariadne = "0.3"

[package]
name = "yip"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "YIP defines how Microdragon services communicate with each other and client processes"
#homepage = "https://yip.microdragon.rs/"
repository = "https://github.com/Microdragon/Yip"
